cabal-version: 1.12
name:          bmnsexcmla-uhiigkzpho-fecljrnpui
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions:
        BlockArguments ConstraintKinds DataKinds DeriveAnyClass
        DeriveDataTypeable DeriveGeneric DerivingStrategies DerivingVia
        DuplicateRecordFields EmptyDataDecls FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedStrings PackageImports
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        StandaloneDeriving TemplateHaskell TupleSections TypeApplications
        TypeFamilies TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        aeson -any,
        amazonka -any,
        amazonka-core -any,
        amazonka-s3 -any,
        base -any,
        base64 >=0.4.2,
        bytestring -any,
        case-insensitive -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        exceptions -any,
        http-api-data -any,
        http-client -any,
        http-types -any,
        lens -any,
        mtl -any,
        network-uri -any,
        resourcet -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        text -any,
        text-show -any,
        time -any,
        unordered-containers -any,
        uuid -any

test-suite pkzbgkwcua-bjkxqmqhtm-kydkdnzrnu
    type:               exitcode-stdio-1.0
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        BlockArguments ConstraintKinds DataKinds DeriveAnyClass
        DeriveDataTypeable DeriveGeneric DerivingStrategies DerivingVia
        DuplicateRecordFields EmptyDataDecls FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedStrings PackageImports
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        StandaloneDeriving TemplateHaskell TupleSections TypeApplications
        TypeFamilies TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        aeson -any,
        amazonka -any,
        amazonka-core -any,
        amazonka-s3 -any,
        base -any,
        base64 >=0.4.2,
        bytestring -any,
        case-insensitive -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        exceptions -any,
        hspec -any,
        http-api-data -any,
        http-client -any,
        http-types -any,
        lens -any,
        mtl -any,
        network-uri -any,
        resourcet -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        bmnsexcmla-uhiigkzpho-fecljrnpui -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        text -any,
        text-show -any,
        time -any,
        unordered-containers -any,
        uuid -any
