cabal-version: 1.12
name:          bnshqvvvle-ouaafahzqf-qoefqifeej
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions: DataKinds OverloadedStrings TypeOperators
    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        base -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        http-api-data -any,
        servant -any
