cabal-version: 1.12
name:          bulvlkdfna-dejoouyizu-hyaxeldtbf
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions:
        AllowAmbiguousTypes BlockArguments ConstraintKinds DeriveAnyClass
        DeriveFunctor DeriveGeneric DerivingStrategies DerivingVia
        DataKinds DuplicateRecordFields EmptyDataDecls FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
        MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction NumericUnderscores OverloadedLabels
        OverloadedStrings QuasiQuotes RankNTypes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TemplateHaskell
        TupleSections TypeApplications TypeFamilies TypeFamilyDependencies
        TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        aeson -any,
        base -any,
        base64-bytestring -any,
        binary -any,
        bytestring -any,
        http-api-data -any,
        lens -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        text -any,
        time -any,
        vector -any
