cabal-version: 1.12
name:          cimzacikqn-syzmmnqrci-udyctttsxo
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions:
        CPP ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric
        DerivingStrategies DerivingVia EmptyDataDecls FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedStrings PackageImports
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        StandaloneDeriving TemplateHaskell TupleSections TypeApplications
        TypeFamilies TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        aeson -any,
        base -any,
        containers -any,
        hspec -any,
        servant -any,
        servant-multipart -any,
        irnnsxssyn-smvaxwghzf-nispjafufa -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        gcencghsrd-meylbcllzm-pxzhgfnhah -any

test-suite nnpafqlboj-adnerktmpz-mavjpxyrzi
    type:               exitcode-stdio-1.0
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        CPP ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric
        DerivingStrategies DerivingVia EmptyDataDecls FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedStrings PackageImports
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        StandaloneDeriving TemplateHaskell TupleSections TypeApplications
        TypeFamilies TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        aeson -any,
        base -any,
        containers -any,
        hspec -any,
        hspec-core -any,
        servant -any,
        servant-multipart -any,
        irnnsxssyn-smvaxwghzf-nispjafufa -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        gcencghsrd-meylbcllzm-pxzhgfnhah -any,
        cimzacikqn-syzmmnqrci-udyctttsxo -any,
        opmzrinbix-dwnjuztviv-lhnefavumr -any,
        text -any
